--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ button {
     display: flex;
     align-items: center;
     margin: 1rem;
-    border: 0.1rem solid black;
+    border: 1px solid black;
     border-radius: 0.5rem;
     padding: 0rem 1rem 1rem 1rem;
     background-image: linear-gradient(to right, transparent, transparent 50%, #4285F4 50%, #DB4437);
